--- a/Week-2/htmlWebPage/style.css
+++ b/Week-2/htmlWebPage/style.css
@@ -26,6 +26,7 @@ img {
 
 .section2 {
     display: grid;
+    grid-template-columns: auto
 }
 
 @media only screen and (max-width: 600px) {
@@ -61,6 +62,6 @@ img {
     margin-bottom: 10px;
 }
 button {
-    width: 10%;
+    width: 20px;
     margin-top: 20px;
 }
