--- a/Week-2/animation/style.css
+++ b/Week-2/animation/style.css
@@ -2,24 +2,92 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: aqua;
+}
+
+.outerBox:hover {
+    animation-name: rotationRed;
+    animation-name: rotationBlue;
+    animation-name: rotationYellow;
+    animation-name: rotationGreen;
 }
 .outerBox {
     margin-top: 100px;
     display: grid;
     grid-template-columns: auto auto;
-    width: 40%;
+    width: 400px;
     height: 400px;
+    position: relative;
 }
+
 .box1 {
     background-color: red;
+    animation-name: rotationRed;
 }
-.box2 {
-    background-color: yellow;
-}
+
 .box3 {
     background-color: blue;
+    animation-name: rotationBlue;
 }
+
+.box2 {
+    background-color: yellow;
+    animation-name: rotationYellow;
+}
+
 .box4 {
     background-color: green;
+    animation-name: rotationGreen;
 }
+
+.box1, .box2, .box3, .box4 {
+    animation-fill-mode: forwards;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    animation-timing-function: linear;
+}
+
+.text {
+    position: absolute;
+    text-align: center;
+    top: 48%;
+    left: 47.5%;
+    z-index: -1;
+}
+
+@keyframes rotationRed{
+    from {
+      transform: translateX(0px) rotate(0deg);
+    }
+    to {
+      transform: translateX(-400px) rotate(90deg);
+    }
+  }
+
+  @keyframes rotationBlue {
+    from {
+      transform: translateX(0px) rotate(0deg);
+    }
+    to {
+      transform: translateX(-400px) rotate(90deg);
+    }
+  }
+
+  @keyframes rotationYellow {
+    from {
+      transform: translateX(0px) rotate(0deg);
+    }
+    to {
+      transform: translateX(400px) rotate(90deg);
+    }
+  }
+
+  @keyframes rotationGreen {
+    from {
+      transform: translateX(0px) rotate(0deg);
+    }
+    to {
+      transform: translateX(400px) rotate(90deg);
+    }
+  }
 
